# speedreed

./: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  render.tsx
docs/: index.html  index.js
docs/pkg/: package.json  speedreed.d.ts  speedreed.js  speedreed_bg.wasm  speedreed_bg.wasm.d.ts
src/: lib.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
