[package]
name = "speedreed"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Required
[lib]
crate-type = ["cdylib", "rlib"]

# Main Deps
[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }

# Development
[dev-dependencies]
wasm-bindgen-test = "0.3.39"


# Release Modifs
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"